--- a/about.html
+++ b/about.html
@@ -1,1 +1,14 @@
-
+<!doctype>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>About Us</title>
+    </head>
+  <body>
+    <h1>about</h1>
+    <p>
+      This site is a sample project for the <strong>awesome</strong> Git tutorial
+      <a href="http://learnenough.com/git-tutorial"><em>Learn Enough™ Git to Be Dangerous</em></a>.
+      </p>
+  </body>
+</html>
