--- a/about.html
+++ b/about.html
@@ -11,5 +11,7 @@
       <a href="http://learnenough.com/git-tutorial"><em>Learn Enough™ Git to Be Dangerous</em></a>.
       </p>
       <img src="images/polar_bear.jpg" alt="Polar bear"/>
+      </a>href="https://www.flickr.com/photos/puliarfanita/22959238329">
+    <img src="images/polar_bear.jpg" alt="Polar bear">
   </body>
 </html>
